feat(security,ops,data): container hardening; TTL cleanup; data export/erase APIs
Dockerfile: non-root user, RO FS (writable volumes), HEALTHCHECK /health; added strict perms.

docker-compose.override.yml: healthchecks, read_only, tmpfs, drop ALL caps (+minimal adds), no-new-privileges, non-root user, explicit logs/data mounts.

backend/app.py: /health strict up/down + safe_mode + deps reachability.

core/memory_system.py: EPHEMERAL_TTL_DAYS; cleanup on init and write; deletion logs.

backend/data_portability.py: export_user_data / erase_user_data with audit logging.

backend/hrm_api.py: POST /api/data/export and /api/data/erase with validation + RBAC + audits.

backend/core_arbiter_api.py: Response annotations; removed stray mis-indented block.

pyproject.toml: mypy  relax global, keep strict overrides for public APIs.

.github/workflows/ci.yml: fix MyPy report artifact naming.

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,8 @@ LOG_FILE="logs/projectalpha.log"
 
 # Model Configuration
 CONDUCTOR_MODEL="gpt-oss-20b"
+GPT5_PREVIEW_ENABLED=true
+GPT5_PREVIEW_MODEL="gpt-5-preview"
 
 # Left Brain (Logic) SLiMs
 LOGIC_HIGH_MODEL="phi4-mini-reasoning:3.8b"
