Implement core VSCode dry-run system for SLiM/HRM/MoE
Core features implemented:
- Comprehensive dry-run utility framework (common/dryrun.py)
- SLiM contract system with validation (slim/sdk.py)
- MoE arbitration with affect-aware routing (router/arbitration.py)
- Enhanced anchor system with dry-run support
- VSCode strict type checking configuration
- Environment configuration for dry-run mode
- HRM API dry-run integration

Ready for safe SLiM/HRM/MoE development and testing

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,41 @@ CONDUCTOR_MODEL="gpt-oss-20b"
 GPT5_PREVIEW_ENABLED=true
 GPT5_PREVIEW_MODEL="gpt-5-preview"
 
+# HRM Policy Configuration
+HRM_POLICY_PATH=hrm/policies/default_policy.yaml
+HRM_POLICY_STRICT_MODE=true
+HRM_ANCHOR_TIMEOUT=30
+
+# MoE (Mixture of Experts) Configuration
+MOE_ARBITRATION_MODEL=gpt-4
+MOE_CONFIDENCE_THRESHOLD=0.7
+MOE_MAX_EXPERTS=5
+MOE_ROUTING_STRATEGY=confidence_weighted
+
+# SLiM Agent Configuration
+SLIM_LOGIC_HIGH_MODEL=phi4-mini-reasoning:3.8b
+SLIM_LOGIC_CODE_MODEL=qwen2.5-coder:3b
+SLIM_LOGIC_PROOF_MODEL=deepseek-r1:1.5b
+SLIM_EMOTION_VALENCE_MODEL=gemma3:1b
+SLIM_EMOTION_CREATIVE_MODEL=custom-creativity:latest
+SLIM_CREATIVE_METAPHOR_MODEL=custom-metaphor:latest
+
+# Affect-Aware Routing Configuration
+AFFECT_ROUTING_ENABLED=true
+AFFECT_CONTEXT_WINDOW=10
+AFFECT_DRIFT_DETECTION=true
+AFFECT_MODULATION_STRENGTH=0.8
+
+# Development & Testing
+DRY_RUN=true
+DRY_RUN_MODE=true
+DRY_RUN_LOG_ALL=true
+DRY_RUN_SIMULATE_DELAYS=false
+DRY_RUN_FAIL_RATE=0.0
+STRICT_TYPE_CHECKING=true
+ENABLE_DEBUG_LOGGING=false
+TEST_MODE=false
+
 # Left Brain (Logic) SLiMs
 LOGIC_HIGH_MODEL="phi4-mini-reasoning:3.8b"
 LOGIC_CODE_MODEL="qwen2.5-coder:3b"
