--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,43 @@
-fastapi>=0.104.1
-uvicorn>=0.24.0
-requests>=2.31.0
-pydantic>=2.5.0
-python-multipart>=0.0.6
-python-dotenv>=1.0.0
-torch>=2.1.0
-numpy>=1.24.0
-pandas>=2.0.0
-scikit-learn>=1.3.0
-aiofiles>=23.2.1
-asyncio-mqtt>=0.16.1
-websockets>=12.0
-jinja2>=3.1.0
-matplotlib>=3.7.0
-seaborn>=0.12.0
-plotly>=5.17.0
-psutil>=5.9.0
-httpx>=0.25.0
-python-jose>=3.3.0
-passlib>=1.7.4
-bcrypt>=4.1.0
-sqlalchemy>=2.0.0
-alembic>=1.13.0
-redis>=5.0.0
-celery>=5.3.0
-pytest>=7.4.0
-pytest-asyncio>=0.21.0
-black>=23.0.0
-flake8>=6.1.0
-mypy>=1.7.0
-coverage>=7.3.0
-aiohttp>=3.9.0
-aiosqlite>=0.19.0
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+requests==2.31.0
+pydantic==2.5.1
+python-multipart==0.0.6
+python-dotenv==1.0.0
+
+# Core runtime libs
+httpx==0.25.2
+aiofiles==23.2.1
+aiohttp==3.9.1
+websockets==12.0
+jinja2==3.1.2
+psutil==5.9.6
+
+# ML/NLP (common minimal set used across the project)
+torch==2.1.1
+transformers==4.36.2
+numpy==1.24.4
+pandas==2.1.4
+scikit-learn==1.3.2
+
+# Auth/Security
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+cryptography==41.0.8
+
+# Caching/Queueing/DBs (commonly used)
+redis==5.0.1
+aiosqlite==0.19.0
+
+# Plotting (used in demos/tools)
+matplotlib==3.8.2
+seaborn==0.13.0
+plotly==5.17.0
+
+# Dev/Test (kept here for convenience)
+pytest==7.4.3
+pytest-asyncio==0.21.1
+black==23.11.0
+flake8==6.1.0
+mypy==1.7.1
+coverage==7.3.0
